--- a/forkme.html
+++ b/forkme.html
@@ -43,7 +43,7 @@ pureEngine.run(backupConfiguration,backupResult,start,interval,end)
 var files = backupResult.getWorstCaseFiles()
 var text = ""
 for(var counter=0;counter < files.length;counter = counter + 1 ) {
-		//find more examples here function VeeamBackupFileObjectInheritable(file,parent,type,fileSize,createDate,pointDate)
+		//find more examples here function VeeamBackupFileObjectInheritable
 		//eg VeeamBackupFileObj.toString = function ()
 		text += files[counter].toString()+"<br>"
 }
